# KDKDev

./: .gitignore  README.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/scenes/crysponza/: sponza.mtl
app/src/main/assets/scenes/crysponza/textures/ktx/: background.ktx  background_ddn.ktx  chain_texture.ktx  chain_texture_ddn.ktx  chain_texture_mask.ktx  lion.ktx  lion2_ddn.ktx  lion_ddn.ktx  spnza_bricks_a_ddn.ktx  spnza_bricks_a_diff.ktx  spnza_bricks_a_spec.ktx  sponza_arch_ddn.ktx  sponza_arch_diff.ktx  sponza_arch_spec.ktx  sponza_ceiling_a_diff.ktx  sponza_ceiling_a_spec.ktx  sponza_column_a_ddn.ktx  sponza_column_a_diff.ktx  sponza_column_a_spec.ktx  sponza_column_b_ddn.ktx  sponza_column_b_diff.ktx  sponza_column_b_spec.ktx  sponza_column_c_ddn.ktx  sponza_column_c_diff.ktx  sponza_column_c_spec.ktx  sponza_curtain_blue_diff.ktx  sponza_curtain_diff.ktx  sponza_curtain_green_diff.ktx  sponza_curtain_spec.ktx  sponza_details_diff.ktx  sponza_details_spec.ktx  sponza_fabric_blue_diff.ktx  sponza_fabric_diff.ktx  sponza_fabric_green_diff.ktx  sponza_fabric_spec.ktx  sponza_flagpole_diff.ktx  sponza_flagpole_spec.ktx  sponza_floor_a_diff.ktx  sponza_floor_a_spec.ktx  sponza_roof_diff.ktx  (+13 more)
app/src/main/assets/shaders/tiled_shading/: deferred_fragment.glsl  deferred_vertex.glsl  downsample_minmax_fragment.glsl  globals.glsl  simple_fragment.glsl  simple_vertex.glsl  tiledShading.glsl  tiled_deferred_fragment.glsl  tiled_deferred_vertex.glsl  tiled_forward_fragment.glsl  tiled_forward_vertex.glsl
app/src/main/cpp/: AABB.h  CMakeLists.txt  ClipRegion.h  Config.h  Light.h  LightGrid.cpp  LightGrid.h  OBJModel.cpp  OBJModel.h  ReadMe.txt  RendererES2.cpp  Renderer_Tiled_Shading.cpp  aabb.cpp  android_fopen.c  android_fopen.h  gles3jni.cpp  gles3jni.h  jniapi.cpp  jniapi.h  tiled_shading.cpp  tiled_shading.h
app/src/main/cpp/Common/Include/: Bench.h  Renderer.h  Timer.h  common.h  esUtil.h  model_obj.h  model_skinNNLS.h  texture_maps.h
app/src/main/cpp/Common/Source/: Bench.cpp  Renderer.cpp  Timer.cpp  esShader.cpp  esTransform.cpp  model_obj.cpp  model_skinNNLS.cpp  texture_maps.cpp
app/src/main/cpp/glm/detail/: dummy.cpp
app/src/main/cpp/utils/: CheckGLError.cpp  CheckGLError.h  ComboShader.cpp  ComboShader.h  GlBufferObject.h  IntTypes.h  Rendering.h  SimpleCamera.cpp  SimpleCamera.h  SimpleShader.cpp  SimpleShader.h
app/src/main/java/com/android/gles3jni/: GLES3JNIActivity.java  GLES3JNILib.java  GLES3JNIView.java  Observer.java  Subject.java
app/src/main/res/layout/: widgets.xml
